[gd_scene load_steps=2 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Get" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -57.0
margin_right = 161.0
margin_bottom = -20.0
text = "Get data"

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = 32.0
margin_right = 224.5
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test text"
align = 1
valign = 1
autowrap = true

[node name="Create" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -112.0
margin_right = 161.0
margin_bottom = -75.0
text = "Create server"

[node name="ServerName" type="LineEdit" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -163.0
margin_right = 115.0
margin_bottom = -128.0
placeholder_text = "Server name"

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = 77.0
margin_right = 350.0
margin_bottom = 278.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer"]

[node name="GetServers" type="HTTPRequest" parent="."]

[node name="EnterInServer" type="HTTPRequest" parent="."]

[connection signal="pressed" from="ColorRect/Get" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/Create" to="." method="_on_Create_pressed"]
[connection signal="request_completed" from="GetServers" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="EnterInServer" to="." method="_on_EnterInServer_request_completed"]
